--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "video-detection",
+  "name": "joyrush-api",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start":"node server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
     "herolu-postbuild": "NPM_CONFIG_PRODUCTION=false npm install"
@@ -17,7 +17,6 @@
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.19",
-    "nodemon": "^2.0.4"
+    "mongoose": "^5.9.19"
   }
 }
